# LinuxApplicationDevelopment2021

./: README.md
03_Multifile/: fun.c  makefile  out  prog.c
03_TerminalProject/: Show.c
04_Text/: randomize.sh
05_Debugging/: makefile  range.c  test1.gdb  test1.gold  test2.gdb  test2.gold
06_TracingFencing/: fake_remove.c  makefile  move.c  test_error.sh
07_Environmental/: Makefile.am  configure.ac  rhasher.c  test_md5.sh  test_sha1.sh
08_Regexps/: Makefile.am  configure.ac  esub.c  test.sh
09_Testing/: Makefile.am
09_Testing/src/: Makefile.am  buf.h
09_Testing/tests/: Makefile.am  test_grow.c  test_init.c  test_pop.c  test_push.c  tests.h
10_Documenting/: Makefile.am  configure.ac  guess_game.pot
10_I18n/: Makefile.am  configure.ac  guess_game.c  ru.po
11_Documenting/: Makefile.am  README.md  guess_game.1  guess_game.c  guess_game.pot  ru.po
